# dab

./: Cargo.toml  README.md  SKILL.md
.cursor/rules/: adb-client.mdc  app-struct.mdc  cli-commands.mdc  project-structure.mdc  readme-guide.mdc
.github/workflows/: rust-tests.yml
purrge/: Cargo.toml
scripts/: install-skill.sh
src/: adb_client.rs  app.rs  cli.rs  main.rs  temp.rs
