[package]
name = "abd"
version = "0.1.0"
edition = "2021"
description = "Android package manager CLI tool"
authors = ["César Ferreira"]
license = "MIT"
repository = "https://github.com/cesarferreira/xxx"
homepage = "https://github.com/cesarferreira/xxx"
readme = "README.md"

[[bin]]
name = "abd"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
inquire = "0.6"
colored = "2.0"
thiserror = "1.0"
directories = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tokio = { version = "1.32", features = ["full"] }
async-trait = "0.1"
which = "4.4"
regex = "1.9"
anyhow = "1.0"
fuzzy-matcher = "0.3"
ctrlc = "3"
