[package]
name = "dab-cli"
version = "0.5.0"
edition = "2021"
description = "Android package manager CLI tool"
authors = ["César Ferreira"]
license = "MIT"
repository = "https://github.com/cesarferreira/dab"
homepage = "https://github.com/cesarferreira/dab"
readme = "README.md"

[[bin]]
name = "dab"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
inquire = "0.6"
colored = "2.0"
thiserror = "1.0"
directories = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tokio = { version = "1.32", features = ["full"] }
async-trait = "0.1"
which = "4.4"
regex = "1.9"
anyhow = "1.0"
fuzzy-matcher = "0.3"
ctrlc = "3"
zip = "0.6"
