[package]
name = "dab-cli"
version = "0.6.0"
edition = "2021"
description = "Android package manager CLI tool"
authors = ["César Ferreira"]
license = "MIT"
repository = "https://github.com/cesarferreira/dab"
homepage = "https://github.com/cesarferreira/dab"
readme = "README.md"

[[bin]]
name = "dab"
path = "src/main.rs"

[dependencies]
androkit = "0.2"
clap = { version = "4.4", features = ["derive"] }
inquire = "0.6"
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
fuzzy-matcher = "0.3"
